@@ -2,6 +2,9 @@ Version 0.5-2 (2010-11-28)
 
 o Added loddsratio and related methods for log odds ratios, generalizing vcd::oddsratio from
   2 x 2 (x strata) tables to R x C (x strata) tables
+o Added as.matrix.loddsratio, as.array.loddsratio methods
+o Added some simple plot examples to example(loddsratio), anticipating a plot method
+o Added data(Fungicide), a 2 x 2 x 2 x 2 table
 
 Version 0.5-1 (2010-09-17)
 
